# magisk-frida

./: pyproject.toml
base/: action.sh  customize.sh  install.sh  service.sh  utils.sh
base/common/: service.sh
