[tool.poetry]
name = "magisk-frida"
version = "1.0.1"
description = "Run frida-server on boot with Magisk"
authors = ["Nipuna Weerasekara <w.nipuna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
flake8 = "^3.7"
ruff = "^0.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"